--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "nodemon",
+    "start:prod": "node dist/server.js",
+    "build": "tsc -p .",
     "test": "jest --watchAll --no-cache"
   },
   "keywords": [],
