--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "nodemon",
+    "start": "cross-env DEBUG=express:* & nodemon",
     "start:prod": "node dist/server.js",
     "build": "tsc -p .",
     "test": "jest --watchAll --no-cache"
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@types/express": "^4.17.17",
+    "@types/express-healthcheck": "^0.1.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -31,7 +32,11 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv-defaults": "^5.0.2",
     "express": "^4.18.2",
+    "express-healthcheck": "^0.1.0",
+    "http-status-codes": "^2.2.0",
     "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.1"
   }
