--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.3",
     "dotenv-defaults": "^5.0.2",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-healthcheck": "^0.1.0",
     "http-status-codes": "^2.2.0",
     "mongodb-memory-server": "^8.13.0",
