--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
+    "date-and-time": "^3.0.2",
     "dotenv-defaults": "^5.0.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-healthcheck": "^0.1.0",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.9.2",
     "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.1"
   }
