--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "cross-env DEBUG=express:* & nodemon",
     "start:prod": "node dist/server.js",
+    "prettify": "npx prettier --write \"src/**/*.{ts,js,json}\"",
     "build": "tsc -p .",
     "test": "jest --watchAll --no-cache"
   },
@@ -20,17 +21,19 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "date-and-time": "^3.0.2",
