--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "cross-env DEBUG=express:* & nodemon",
-    "start:prod": "node dist/server.js",
-    "prettify": "npx prettier --write \"src/**/*.{ts,js,json}\"",
-    "build": "tsc -p .",
-    "test": "jest --watchAll --no-cache"
+    "prettier": "npx prettier --write \"src/**/*.{ts,js,json}\"",
+    "lint": "npm run eslint . --ext .js,.jsx,.ts,.tsx",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc -p .",
+    "test": "jest --watchAll --no-cache --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,14 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@faker-js/faker": "^8.0.2",
     "@types/express": "^4.17.17",
     "@types/express-healthcheck": "^0.1.0",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.195",
+    "@types/mockingoose": "^2.13.0",
     "@types/node": "^20.3.2",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
@@ -29,9 +34,14 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "fishery": "^2.2.2",
     "jest": "^29.5.0",
+    "lodash": "^4.17.21",
+    "mockingoose": "^2.16.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
