--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    // "project": ["./backend/tsconfig.json"]
   },
   "rules": {
     "prettier/prettier": ["error"]
