--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,15 +3,32 @@
     "es2021": true,
     "node": true
   },
+  "ignorePatterns": [
+    "dist/",
+    "node_modules/**/*"
+  ],
   "extends": ["standard-with-typescript", "prettier"],
   "plugins": ["prettier"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    // "project": ["./backend/tsconfig.json"]
+    "project": ["./tsconfig.json"]
   },
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "no-tabs": [
+      "error",
+      {
+        "allowIndentationTabs": true
+      }
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 120,
+        "ignoreUrls": true
+      }
+    ]
   }
 }
