--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.6.1",
     "lodash": "^4.17.21",
     "mockingoose": "^2.16.2",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "supertest": "^6.3.3",
