--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "ts-patch": "^3.0.1",
     "typescript": "^5.1.0"
   },
   "dependencies": {
