chore: added translator for path aliases on build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,11 +16,11 @@
     ".prettierrc": true,
     ".tool-versions": true,
     ".eslint": true,
-    "**/*.test.ts": true,
+    "**/*.test.ts": false,
     "package-lock.json": true,
     "Dockerfile": true,
     "jest.config.js": true,
-    "tsconfig.json": true,
+    "tsconfig.json": false,
     "nodemon.json": true,
     "yarn.lock": true
   }
