--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc -p tsconfig.prod.json",
     "test": "jest --watchAll --no-cache --runInBand --detectOpenHandles",
-    "prepare": "ts-patch install -s"
+    "prepare": "ts-patch install -s && husky install"
   },
   "keywords": [],
   "author": "",
@@ -36,11 +36,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "fishery": "^2.2.2",
+    "husky": "^8.0.0",
     "jest": "^29.6.1",
+    "lint-staged": "^13.2.3",
     "lodash": "^4.17.21",
     "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -58,5 +61,11 @@
     "joi": "^17.9.2",
     "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.2"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,json}": [
+      "npx pretty-quick --staged",
+      "npx eslint . --ext .js,.ts,.json --fix"
+    ]
   }
 }
