chore: included package-lock within eslintignore

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "cross-env DEBUG=express:* & nodemon",
     "prettier": "npx prettier --write \"src/**/*.{ts,js,json}\"",
-    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint": "npx eslint src/ --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npx eslint src/ --ext .js,.jsx,.ts,.tsx --fix",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc -p tsconfig.prod.json",
     "test:watch": "jest --watchAll --no-cache --runInBand --detectOpenHandles",
