chore: extended github actions to fail if prettier and eslint can't run

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "cross-env DEBUG=express:* & nodemon",
-    "prettier": "npx prettier --write \"src/**/*.{ts,js,json}\"",
+    "prettier": "npx prettier --check \"src/**/*.{ts,js,json}\"",
+    "prettier:fix": "npx prettier --write \"src/**/*.{ts,js,json}\"",
     "lint": "npx eslint src/ --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "npx eslint src/ --ext .js,.jsx,.ts,.tsx --fix",
     "clean": "rm -rf dist",
@@ -66,7 +67,7 @@
   "lint-staged": {
     "**/*.{js,ts,json}": [
       "npx pretty-quick --staged",
-      "npx eslint . --ext .js,.ts,.json --fix"
+      "npx eslint src/ --ext .js,.ts,.json --fix"
     ]
   }
 }
