--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.0",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.44.0",
@@ -62,7 +63,8 @@
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
     "mongodb-memory-server": "^8.13.0",
-    "mongoose": "^7.3.2"
+    "mongoose": "^7.3.2",
+    "swagger-ui-express": "^5.0.0"
   },
   "lint-staged": {
     "**/*.{js,ts,json}": [
