--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "cross-env DEBUG=express:* & nodemon",
     "prettier": "npx prettier --check \"src/**/*.{ts,js,json}\"",
     "prettier:fix": "npx prettier --write \"src/**/*.{ts,js,json}\"",
-    "lint": "npx eslint src/ --ext .js,.ts",
-    "lint:fix": "npx eslint src/ --ext .js,.ts --fix",
+    "lint": "npx eslint src/ --ext .js,.ts --config .eslintrc.json",
+    "lint:fix": "npm run lint -- --fix",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc -p tsconfig.prod.json",
     "test:watch": "jest --watchAll --no-cache --runInBand --detectOpenHandles",
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.22.7",
     "@babel/preset-typescript": "^7.22.5",
     "@faker-js/faker": "^8.0.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-healthcheck": "^0.1.0",
     "@types/jest": "^29.5.2",
@@ -55,6 +56,7 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "date-and-time": "^3.0.2",
     "dotenv-defaults": "^5.0.2",
     "express": "^4.18.2",
