--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
     ".prettierrc": true,
     ".tool-versions": true,
     ".eslint": true,
-    "**/*.test.ts": true,
+    "src/**/*.test.ts": true,
+    "src/**/index.ts": true,
     "package-lock.json": true,
     "Dockerfile": true,
     "jest.config.js": true,
