chore: fixing line ending on project

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     "no-tabs": [
       "error",
       {
-        "allowIndentationTabs": true
+        "allowIndentationTabs": false
       }
     ],
     "max-len": [
