--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "useTabs": false,
-  "endOfLine": "crlf",
+  "endOfLine": "lf",
   "semi": true,
   "singleQuote": true
 }
