--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Run tests on CI
+name: Run Master CI
 
 on:
   push:
@@ -29,3 +29,10 @@ jobs:
       - run: npm run lint
       - run: npm run prettier
       - run: npm test
+  docker-container:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag solid-sniffle:$(date +%s)
