--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Run Master CI
+name: Run Tests on CI
 
 on:
   push:
@@ -29,10 +29,3 @@ jobs:
       - run: npm run lint
       - run: npm run prettier
       - run: npm test
-  docker-container:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag solid-sniffle:$(date +%s)
