--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Run Tests on CI
 
 on:
@@ -10,7 +7,7 @@ on:
     branches: ['master']
 
 jobs:
-  build:
+  run-tests:
     runs-on: ubuntu-latest
 
     strategy:
@@ -25,7 +22,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run prettier
-      - run: npm test
+
+      - name: Running tests, prettier and linter
+        run: |
+          npm ci
+          npm run lint
+          npm run prettier
+          npm test
