ci: made the image naming dynamic

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           context: "{{defaultContext}}"
           push: true
-          tags: rbcorrea/solid-sniffle:latest
+          tags: rbcorrea/${{ github.repository }}:${{ github.sha }}
