chore: linked dependency with both containers to make the frontend wait for the backend be ready

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - "46000:46000"
   frontend:
     container_name: hard_days
+    depends_on:
+      backend:
+        condition: service_healthy
     restart: on-failure
     image: rbcorrea/glowing-memory:latest
     ports:
